# chapter_chopper

./: README.md  pyproject.toml
src/chapter_chopper/: __init__.py  __main__.py  extract_toc.py  main.py  split_to_chapters.py
